Update for review

--- a/index.html
+++ b/index.html
@@ -10,57 +10,120 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">Pet Store</a>
+				<div class="navbar-form">
+				<img class="navbar-left" src="img/petstore_logo.png" width="60px" />
+
+				<a class="navbar-brand" href="#"> Pet Store</a>
+				</div>
 			</div>
 
-			<div id="navbar" class="navbar-collapse collapse">
-				<form class="navbar-form navbar-right">
-
+			<div class="navbar-form navbar-right">
 					<ul class="nav navbar-nav">
-					 <li class="active"><a href="#">Home</a></li>
+					 <li><a href="#">Home</a></li>
 					 <li><a href="#">Products</a></li>
-						<li><a href="#">Contact Us</a></li>
-							 </ul>
-
-				</form>
+					 <li><a href="#">Contact Us</a></li>
+					</ul>
 			</div><!--/.navbar-collapse -->
 		</div>
 	</nav>
 	<!-- Main jumbotron for a primary marketing message or call to action -->
-	<div class="jumbotron">
-		<div class="container">
-		<img src="../img/hero.png" />
-		</div>
-	</div>
+	<div class="jumbotron"><p><h4>THE PRODUCT THEY LOVE. THE PRICES YOU LIKE</h4></p> </div>
 
 	<div class="container">
+
+
 		<!-- Example row of columns -->
-		<div class="row">
-			<div class="col-md-4">
-				<h2>Heading F</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		<div class="col-md-8">
+					<div class="row1">
+			<h2>Features</h2>
+			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+		      </div>
+<div class="row2">
+
+				<div class="col-md-4">
+					<div class="alert-info">
+					<img src="img/product1.jpg" width="150px">
+					<h4>Dog Bowl</h4>
+						<p>The best dog bowl for your dog.</p>
+						<p><a class="btn btn-default" href="#" role="button">Purchase Now</a></p>
+
+						</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="alert-info">
+					<img src="img/product2.jpg" width="150px">
+					<h4>Cat Toy</h4>
+					<p>The best cat toy for your cat.</p>
+					<p><a class="btn btn-default" href="#" role="button">Purchase Now </a></p>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="alert-info">
+					<img src="img/product3.jpg" width="150px">
+					<h4>Parrot Stuff</h4>
+					<p>The best parrot stuff for your parrots.</p>
+					<p><a class="btn btn-default" href="#" role="button">Purchase Now</a></p>
+				</div>
+				</div>
 			</div>
-			<div class="col-md-4">
-				<h2>Heading</h2>
-				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-		 </div>
-			<div class="col-md-4">
-				<h2>Heading</h2>
-				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-				<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+
+			<!--row1-->
+	</div>
+
+			<div class="col-md-4 text-center">
+
+					<h2>Services</h2>
+					<h4><a href="#">Adopt A Cat</a></h4>
+					<p>Donec id elit non mi porta gravida at eget metus. </p>
+
+					<h4><a href="#">Adopt A Dog</a></h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+					<h4><a href="#">Adopt A Fish</a></h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+
 			</div>
-		</div>
+</div>
+		<div class="panel-footer">
+			<div class="panel-body">
+				<div class="footerRow1">
+					<div class="col-md-4">
+						<img class="navbar-left" src="img/petstore_logo.png" alt="logo" width="100px" >
+					</div>
+				  <div class="col-md-4">
+						<div class="border">
+							<p>PetStore<br>
+							Frenso,CA <br>
+							info@petstore.com <br></p>
+						</div>
+					</div>
+				<div class="col-md-4">
+					<div class="border">
+						<p>
+							Twitter <br>
+							Facebook <br>
+							in Linkedin <br>
+						</p>
+					</div>
+				</div>
+				</div><!--end footerRow1-->
+
+				<div class="col-md-12 text-center text-muted">
+					<div class="footerRow2">
+						@PetStore, Inc. All rights reserved
+					</div>
+					</div>
+
+			</div><!--end panel-body-->
+		</div><!--end panel-footer-->
+
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
