Update for review

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 
 </head>
 <body>
@@ -16,7 +17,7 @@
 				<div class="navbar-form">
 				<img class="navbar-left" src="img/petstore_logo.png" width="60px" />
 
-				<a class="navbar-brand" href="#"> Pet Store</a>
+				<a id="name" href="#"> Pet Store</a>
 				</div>
 			</div>
 
@@ -48,7 +49,7 @@
 					<img src="img/product1.jpg" width="150px">
 					<h4>Dog Bowl</h4>
 						<p>The best dog bowl for your dog.</p>
-						<p><a class="btn btn-default" href="#" role="button">Purchase Now</a></p>
+						<p><a class="btn btn-primary" href="#" role="button">Purchase Now</a></p>
 
 						</div>
 				</div>
@@ -58,7 +59,7 @@
 					<img src="img/product2.jpg" width="150px">
 					<h4>Cat Toy</h4>
 					<p>The best cat toy for your cat.</p>
-					<p><a class="btn btn-default" href="#" role="button">Purchase Now </a></p>
+					<p><a class="btn btn-primary" href="#" role="button">Purchase Now &raquo; </a></p>
 					</div>
 				</div>
 
@@ -67,7 +68,7 @@
 					<img src="img/product3.jpg" width="150px">
 					<h4>Parrot Stuff</h4>
 					<p>The best parrot stuff for your parrots.</p>
-					<p><a class="btn btn-default" href="#" role="button">Purchase Now</a></p>
+					<p><a class="btn btn-primary" href="#" role="button">Purchase Now</a></p>
 				</div>
 				</div>
 			</div>
